Closed Bug 1639845 Opened 5 years ago Closed 5 years ago

Perma build bustage make[3]: *** [libmozjs-78.so] Error 1 when Gecko 78 merges to Beta on 2020-06-01

Categories

(Core :: JavaScript: WebAssembly, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 + verified

People

(Reporter: aryx, Assigned: lth)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

central-as-beta-simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=49ea038a588c25d575a555e74c45c2a23eb3fd57&selectedTaskRun=Womz9hNoQ-O9danVf1WCYQ-0

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=303216364&repo=try&lineNumber=4465

[task 2020-05-21T10:58:01.101Z] /builds/worker/fetches/gcc/bin/../lib/gcc/x86_64-unknown-linux-gnu/7.4.0/../../../../x86_64-unknown-linux-gnu/bin/ld: libmozjs-78.so: hidden symbol `_ZN2js3jit13CodeGenerator29visitWasmReduceSimd128ToInt64EPNS0_25LWasmReduceSimd128ToInt64E' isn't defined
[task 2020-05-21T10:58:01.101Z] /builds/worker/fetches/gcc/bin/../lib/gcc/x86_64-unknown-linux-gnu/7.4.0/../../../../x86_64-unknown-linux-gnu/bin/ld: final link failed: bad value
[task 2020-05-21T10:58:01.101Z] collect2: error: ld returned 1 exit status
[task 2020-05-21T10:58:01.102Z] /builds/worker/workspace/build/src/config/rules.mk:604: recipe for target 'libmozjs-78.so' failed
[task 2020-05-21T10:58:01.102Z] make[3]: *** [libmozjs-78.so] Error 1

Yeah, WILLFIX.

Flags: needinfo?(lhansen)
Assignee: nobody → lhansen
Severity: -- → S2
Status: NEW → ASSIGNED
Priority: -- → P1

An annoying fact is that MIR and LIR nodes cannot be conditional on
ifdefs, because the preprocessors that generate code from the node
definitions are not ifdef-aware. In the case of SIMD, which has new
MIR and LIR nodes, there are stub definitions in Lowering-shared.cpp
for the ifndef ENABLE_WASM_SIMD case to implement stub lowering
methods on non-SIMD platforms, including x64 when SIMD is disabled.
(The stubs all MOZ_CRASH.)

But we additionally need to have stub definitions for the x64 code
generation methods for builds on x64 when SIMD is disabled. Here I've
implemented those by moving the ifdefs inside the function bodies,
which seemed like the simplest fix for now. Only x64 is affected as
the new LIR nodes are x64-specific.

Attachment #9150854 - Attachment description: Bug 1639845 - Fix SIMD link errors for beta sim. r?rhunt → Bug 1639845 - Fix SIMD link errors for beta sim. r?bbouvier
Pushed by lhansen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8c5496bf0b81 Fix SIMD link errors for beta sim. r=bbouvier
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: