Bug 1639845 - Fix SIMD link errors for beta sim. r=bbouvier

An annoying fact is that MIR and LIR nodes cannot be conditional on
ifdefs, because the preprocessors that generate code from the node
definitions are not ifdef-aware.  In the case of SIMD, which has new
MIR and LIR nodes, there are stub definitions in Lowering-shared.cpp
for the ifndef ENABLE_WASM_SIMD case to implement stub lowering
methods on non-SIMD platforms, including x64 when SIMD is disabled.
(The stubs all MOZ_CRASH.)

But we additionally need to have stub definitions for the x64 code
generation methods for builds on x64 when SIMD is disabled.  Here I've
implemented those by moving the ifdefs inside the function bodies,
which seemed like the simplest fix for now.  Only x64 is affected as
the new LIR nodes are x64-specific.

Differential Revision: https://phabricator.services.mozilla.com/D76381