js/src/jit/x64/CodeGenerator-x64.cpp
@@ -696,25 +696,34 @@ void CodeGenerator::visitTestI64AndBranch(LTestI64AndBranch* lir) {
   emitBranch(Assembler::NonZero, lir->ifTrue(), lir->ifFalse());
 }
 
-#ifdef ENABLE_WASM_SIMD
+// BEGIN WASM SIMD
 
 // These code generators are really x86-shared but some Masm interfaces
 // are not yet available on x86.
 
 void CodeGenerator::visitSimd128(LSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   const LDefinition* out = ins->getDef(0);
   masm.loadConstantSimd128(ins->getSimd128(), ToFloatRegister(out));
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmBitselectSimd128(LWasmBitselectSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   FloatRegister rhs = ToFloatRegister(ins->rhs());
   FloatRegister control = ToFloatRegister(ins->control());
   FloatRegister temp = ToFloatRegister(ins->temp());
   masm.bitwiseSelectSimd128(control, lhsDest, rhs, lhsDest, temp);
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmBinarySimd128(LWasmBinarySimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   FloatRegister rhs = ToFloatRegister(ins->rhs());
   FloatRegister temp1 = ToTempFloatRegisterOrInvalid(ins->getTemp(0));
@@ -1019,17 +1028,25 @@ void CodeGenerator::visitWasmBinarySimd128(LWasmBinarySimd128* ins) {
     default:
       MOZ_CRASH("Binary SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmI64x2Mul(LWasmI64x2Mul* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   FloatRegister rhs = ToFloatRegister(ins->rhs());
   Register64 temp = ToRegister64(ins->getInt64Temp(0));
   masm.mulInt64x2(rhs, lhsDest, temp);
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmVariableShiftSimd128(
     LWasmVariableShiftSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   Register rhs = ToRegister(ins->rhs());
   Register temp1 = ToTempRegisterOrInvalid(ins->getTemp(0));
@@ -1077,18 +1094,26 @@ void CodeGenerator::visitWasmVariableShiftSimd128(
     default:
       MOZ_CRASH("Shift SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmShuffleSimd128(LWasmShuffleSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   FloatRegister rhs = ToFloatRegister(ins->rhs());
   SimdConstant control = ins->control();
   FloatRegister temp = ToFloatRegister(ins->temp());
   masm.shuffleInt8x16(reinterpret_cast<const uint8_t*>(control.asInt8x16()),
                       rhs, lhsDest, temp);
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmReplaceLaneSimd128(LWasmReplaceLaneSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister lhsDest = ToFloatRegister(ins->lhsDest());
   const LAllocation* rhs = ins->rhs();
   uint32_t laneIndex = ins->laneIndex();
@@ -1112,16 +1137,24 @@ void CodeGenerator::visitWasmReplaceLaneSimd128(LWasmReplaceLaneSimd128* ins) {
     default:
       MOZ_CRASH("ReplaceLane SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmReplaceInt64LaneSimd128(
     LWasmReplaceInt64LaneSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   MOZ_RELEASE_ASSERT(ins->simdOp() == wasm::SimdOp::I64x2ReplaceLane);
   masm.replaceLaneInt64x2(ins->laneIndex(), ToRegister64(ins->rhs()),
                           ToFloatRegister(ins->lhsDest()));
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmScalarToSimd128(LWasmScalarToSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister dest = ToFloatRegister(ins->output());
 
   switch (ins->simdOp()) {
@@ -1143,9 +1176,13 @@ void CodeGenerator::visitWasmScalarToSimd128(LWasmScalarToSimd128* ins) {
     default:
       MOZ_CRASH("ScalarToSimd128 SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmInt64ToSimd128(LWasmInt64ToSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   Register64 src = ToRegister64(ins->src());
   FloatRegister dest = ToFloatRegister(ins->output());
 
@@ -1180,9 +1217,13 @@ void CodeGenerator::visitWasmInt64ToSimd128(LWasmInt64ToSimd128* ins) {
     default:
       MOZ_CRASH("Int64ToSimd128 SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmUnarySimd128(LWasmUnarySimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister src = ToFloatRegister(ins->src());
   FloatRegister dest = ToFloatRegister(ins->output());
 
@@ -1269,9 +1310,13 @@ void CodeGenerator::visitWasmUnarySimd128(LWasmUnarySimd128* ins) {
     default:
       MOZ_CRASH("Unary SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmReduceSimd128(LWasmReduceSimd128* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister src = ToFloatRegister(ins->src());
   const LDefinition* dest = ins->output();
   uint32_t imm = ins->imm();
@@ -1315,10 +1360,14 @@ void CodeGenerator::visitWasmReduceSimd128(LWasmReduceSimd128* ins) {
     default:
       MOZ_CRASH("Reduce SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
 void CodeGenerator::visitWasmReduceSimd128ToInt64(
     LWasmReduceSimd128ToInt64* ins) {
+#ifdef ENABLE_WASM_SIMD
   FloatRegister src = ToFloatRegister(ins->src());
   Register64 dest = ToOutRegister64(ins);
   uint32_t imm = ins->imm();
@@ -1330,6 +1379,9 @@ void CodeGenerator::visitWasmReduceSimd128ToInt64(
     default:
       MOZ_CRASH("Reduce SimdOp not implemented");
   }
+#else
+  MOZ_CRASH("No SIMD");
+#endif
 }
 
-#endif  // ENABLE_WASM_SIMD
+// END WASM SIMD
